--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -5,9 +5,11 @@ WORKDIR /backend-flask
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
+COPY start.sh start.sh
+
 COPY . .
 
 ENV FLASK_ENV=development
 
 EXPOSE ${PORT}
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
+CMD sh start.sh
