--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -1,15 +1,17 @@
-FROM python:3.12.0a5-slim
+FROM python:3.9.16-slim-buster
 
 WORKDIR /backend-flask
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY start.sh start.sh
+# COPY start.sh start.sh
 
 COPY . .
 
 ENV FLASK_ENV=development
 
 EXPOSE ${PORT}
-CMD sh start.sh
+# CMD sh start.sh
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
+
