--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,7 +1,7 @@
 flask
 flask-cors
-opentelemetry-api 
-opentelemetry-sdk 
-opentelemetry-exporter-otlp-proto-http 
-opentelemetry-instrumentation-flask 
-opentelemetry-instrumentation-requests
+opentelemetry-api==1.12.0 
+opentelemetry-sdk==1.12.0 
+opentelemetry-exporter-otlp-proto-http==1.12.0 
+opentelemetry-instrumentation-flask==0.33b0 
+opentelemetry-instrumentation-requests==0.33b0
