Enable again running the dockerfile CMD as an external script. This was not the problem

--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -5,13 +5,13 @@ WORKDIR /backend-flask
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-# COPY start.sh start.sh
+COPY start.sh start.sh
 
 COPY . .
 
 ENV FLASK_ENV=development
 
 EXPOSE ${PORT}
-# CMD sh start.sh
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
+CMD sh start.sh
+#CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
 
