--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: ""
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-2_Lgk2qGPEM"
-      REACT_APP_CLIENT_ID: "2rhg45f7fonh75pltqojvi7cuv"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-2_mO0vfs9lc"
+      REACT_APP_CLIENT_ID: "3ntevmablrsspd4klugor453fo"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
