Added new Generate .env file. Update .gitpod.yml Update docker-composed with cruddur-net

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ docker/dynamodb/shared-local-instance.db
 node_modules
 frontend-react-js/build/*
 session-manager-plugin.deb
+backend-flask.env
+frontend-react-js.env
