--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,49 @@
 version: "3.8"
 services:
   backend-flask:
-    environment:
-      CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
-      #CONNECTION_URL: "${PROD_CONNECTION_URL}"
-      FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
-      OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=alu3kdBXHZFlRcsmOqG02A"
-      OTEL_SERVICE_NAME: "backend-flask"
-      AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
-      AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"      
-      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
-      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-      AWS_COGNITO_USER_POOL_ID: "us-east-2_UFbN0js5l"
-      AWS_COGNITO_USER_POOL_CLIENT_ID: "5uikpgv5is2o7nbicpirre4fj5"      
-      ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
-      #AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
+    env_file:
+      - backend-flask.env
+    # environment:
+    #   CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
+    #   #CONNECTION_URL: "${PROD_CONNECTION_URL}"
+    #   FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+    #   BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+    #   OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
+    #   OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=alu3kdBXHZFlRcsmOqG02A"
+    #   OTEL_SERVICE_NAME: "backend-flask"
+    #   AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
+    #   AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"      
+    #   AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+    #   AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+    #   AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+    #   AWS_COGNITO_USER_POOL_ID: "us-east-2_UFbN0js5l"
+    #   AWS_COGNITO_USER_POOL_CLIENT_ID: "5uikpgv5is2o7nbicpirre4fj5"      
+    #   ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+    #   #AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
     build: ./backend-flask
     ports:
       - "4567:4567"
     volumes:
       - ./backend-flask:/backend-flask
+    networks:
+      - cruddur-net      
   frontend-react-js:
-    environment:
-      REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: ""
-      REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-2_UFbN0js5l"
-      REACT_APP_CLIENT_ID: "5uikpgv5is2o7nbicpirre4fj5"
+    env_file:
+      - frontend-react-js.env
     build: ./frontend-react-js
     ports:
       - "3000:3000"
     volumes:
       - ./frontend-react-js:/frontend-react-js
+    networks:
+      - cruddur-net      
+    # environment:
+    #   REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+    #   REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
+    #   REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: ""
+    #   REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
+    #   REACT_APP_AWS_USER_POOLS_ID: "us-east-2_UFbN0js5l"
+    #   REACT_APP_CLIENT_ID: "5uikpgv5is2o7nbicpirre4fj5"
   xray-daemon:
     image: "amazon/aws-xray-daemon"
     environment:
@@ -46,6 +54,8 @@ services:
       - "xray -o -b xray-daemon:2000"
     ports:
       - 2000:2000/udp
+    networks:
+      - cruddur-net      
   db:
     image: postgres:13-alpine
     restart: always
@@ -56,7 +66,8 @@ services:
       - '5432:5432'
     volumes: 
       - db:/var/lib/postgresql/data
-
+    networks:
+      - cruddur-net
   dynamodb-local:
     # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
     # We needed to add user:root to get this working.
@@ -69,7 +80,8 @@ services:
     volumes:
       - "./docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
-
+    networks:
+      - cruddur-net
 volumes:
   db:
     driver: local
@@ -77,6 +89,6 @@ volumes:
 # the name flag is a hack to change the default prepend folder
 # name when outputting the image names
 networks: 
-  internal-network:
+  cruddur-net:
     driver: bridge
-    name: cruddur
+    name: cruddur-net
