--- a/thumbing-serverless-cdk/.env
+++ b/thumbing-serverless-cdk/.env
@@ -1,5 +1,5 @@
-UPLOADS_BUCKET_NAME="cruddur-uploaded-avatars-carlosern"
-ASSETS_BUCKET_NAME="assets.cruddur.com"
+THUMBING_BUCKET_NAME="cruddur-uploaded-avatars-carlosern"
+ASSETS_BUCKET_NAME="assets.carloserncloud.online"
 THUMBING_S3_FOLDER_INPUT="avatars/original"
 THUMBING_S3_FOLDER_OUTPUT="avatars/processed"
 THUMBING_WEBHOOK_URL="https://api.carloserncloud.online/webhooks/avatar"
