--- a/thumbing-serverless-cdk/package.json
+++ b/thumbing-serverless-cdk/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.84.0",
     "constructs": "^10.0.0",
+    "sharp": "^0.32.1",
     "source-map-support": "^0.5.21"
   }
 }
