--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -36,9 +36,11 @@ tasks:
       source "$THEIA_WORKSPACE_ROOT/bin/rds/update-sg-rule"
   - name: fargate
     before: |
+      cd /workspace
       curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"
       sudo dpkg -i session-manager-plugin.deb
-      cd backend-flask      
+      cd $THEIA_WORKSPACE_ROOT 
+      cd backend-flask     
   - name: cdk
     before: |
       npm install -g aws-cdk   
