--- a/thumbing-serverless-cdk/.env
+++ b/thumbing-serverless-cdk/.env
@@ -3,5 +3,5 @@ ASSETS_BUCKET_NAME="assets.carloserncloud.online"
 THUMBING_S3_FOLDER_INPUT="avatars/original"
 THUMBING_S3_FOLDER_OUTPUT="avatars/processed"
 THUMBING_WEBHOOK_URL="https://api.carloserncloud.online/webhooks/avatar"
-THUMBING_TOPIC_NAME="cruddur-assets"
+THUMBING_TOPIC_NAME="cruddur-avatars"
 THUMBING_FUNCTION_PATH="/workspace/aws-bootcamp-cruddur-2023/aws/lambdas/process-images"
