--- a/thumbing-serverless-cdk/.env
+++ b/thumbing-serverless-cdk/.env
@@ -1,4 +1,4 @@
-UPLOADS_BUCKET_NAME="uploads.carloserncloud.online"
+UPLOADS_BUCKET_NAME="cruddur-uploaded-avatars-carlosern"
 ASSETS_BUCKET_NAME="assets.carloserncloud.online"
 THUMBING_S3_FOLDER_INPUT="avatars/original"
 THUMBING_S3_FOLDER_OUTPUT="avatars/processed"
