--- a/thumbing-serverless-cdk/.env
+++ b/thumbing-serverless-cdk/.env
@@ -1,7 +1,7 @@
 UPLOADS_BUCKET_NAME="cruddur-uploaded-avatars-carlosern"
 ASSETS_BUCKET_NAME="assets.carloserncloud.online"
-THUMBING_S3_FOLDER_INPUT="avatars/original"
-THUMBING_S3_FOLDER_OUTPUT="avatars/processed"
+THUMBING_S3_FOLDER_INPUT=""
+THUMBING_S3_FOLDER_OUTPUT="avatars"
 THUMBING_WEBHOOK_URL="https://api.carloserncloud.online/webhooks/avatar"
 THUMBING_TOPIC_NAME="cruddur-avatars"
 THUMBING_FUNCTION_PATH="/workspace/aws-bootcamp-cruddur-2023/aws/lambdas/process-images"
